sass/fearless-homepage.scss
//these styles should be included only on the fearless homepage
//the template.php file is looking for a specific content type
//when it finds it, it will append this stylesheet to the css array

/* Import Sass mixins, variables, Compass modules, etc. */
@import "init";

@import 'components/nmu-slideshow';

//font-size: 12px;
//line-height: 1.75em;

.title-section,
.what-do {
	img {
		max-width:100%;
		height:auto;
	}
}

.tabs-primary.tabs.primary {
	position: absolute;
	top: -96px;
	@media all and #{$mq-bootstrap-md-min} {
		top:-46px;  //bottom of spanning image or whatever else is there.  -144 was the old value, used to put in branding
	}
}

.page__title {
	display: none;
}

h2, h3, h4 {
	text-transform: uppercase;
	font-family: $avenir-black !important;
}

.title-section {
	position: relative;
	background-color:$nmu-green;
	p {
		@include text-shadow(rgba(0, 104, 72, 0.6) 1px 1px 1px);
	}
	& > .overlay {
		position: relative;
		&:before {
			content: "";
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background-color: rgba(0, 100, 0, .6);
		}
	}
	& > .right {
		padding: 20px 50px 30px 50px;
		@media all and #{$mq-bootstrap-md-min} {
			position: absolute;
			padding:0;
			top: 10px;
			right: 10px;
		}
		@media all and #{$mq-bootstrap-lg-min} {
			top: 20px;
		}
	}
	& > .left {
		@media all and #{$mq-bootstrap-md-min} {
			position: absolute;
			top: 10px;
			left: 10px;
		}
		@media all and #{$mq-bootstrap-lg-min} {
			top: 20px;
		}
	}
	h2 {
		font-size: 2em;
		color: $nmu-gold;
		@media all and #{$mq-bootstrap-md-min} {
			font-size: 2.5em;
		}
	}
	p {
		color: white;
	}
}

.info-section {
	padding: 20px 35px 30px 35px;
	background-color: $nmu-gray-evenlighter;
	border-bottom: solid 10px $nmu-green-dark;
	color: $nmu-gray-dark;

	h3 {
		margin-top:0;
		color: $nmu-green-dark;
	}
	.image-wrapper{
		display:none;
		@media all and #{$mq-bootstrap-md-min} {
			display:block;
		}
		position: relative;  //make sure the :before overlay is relative to the wrapper
		overflow:hidden;
		float:right;
		&:before{  //add a color overlay to the images
			position: absolute;
			content:" ";
			top:0;
			left:0;
			width:100%;
			height:100%;
			display: block;
			z-index:0;
			background-color: rgba(240,240,240,0.3);  //this must match the background color of the section
		}
	}
	.image-0{
		float:right;
	}
	.image-1{
		display:inline-block;
		float:right;
		margin-right:-60px;
		margin-top:10px;
	}
	.image-2{
		max-width:160px;  //the bottom image can't be too big or it will break the layout.  because I use one field for both images, i have to force the widt here
		height:auto;

		display:inline-block;
		float:right;
		margin-top:60px;
	}
	a {
		text-decoration:none;
		color: $nmu-green;
		&:hover {
			text-decoration:underline;
			color: $nmu-green;
		}
	}
}


.learning-career {
	background-color: $nmu-gray-evenlighter;  //set this as the bg color because most likely the right column will be the longer one since it is narrower
	position: relative;
	@media all and #{$mq-bootstrap-md-min} {
		@include display-flex;
	}
	.learning,
	.career {
		min-height:250px;
		padding: 20px 50px 30px 50px;
		h3 {
			padding-bottom:10px;
			margin-bottom:15px;
		}
	}
	.learning {
		color: $nmu-gray-dark;
		h3 {
			color: $nmu-green-dark;
		}
	}
	.career {
		background-color: $nmu-gray;
		color: white;
	}
	a {
	text-decoration:none;
	color: $nmu-green;
		&:hover {
			text-decoration:underline;
			color: $nmu-green;
		}
	}
}

.slideshow-section {
	overflow: hidden;
	background-color: $nmu-green;
	.cycle-caption {
		padding: 35px;
		text-align: center;
		color: white;
		a {
			text-decoration:none;
			color: $nmu-gold;
			&:hover {
				text-decoration:underline;
			}
		}
		.button {
			font-family: $avenir-black;
			font-size: 1.9em;
			color: $nmu-gold;
			border: solid thin $nmu-gold;
			text-transform: uppercase;
			padding: 1em 1.5em;
			line-height: 1.5em;
			margin: 10px 10px 40px 10px;
			@media all and #{$mq-bootstrap-xs-max} {
				font-size: 1.5em;
				margin: 25px auto;
			}
		}
	}
	.cycle-overlay {
		height: 100%;
		//background-color: rgba(0, 104, 72, .5);
		//the background color technique can leave part of the image without an overlay if the text is too long.  fixed by adding an overlay right to the image.
		background-color:transparent;
		.button {
			font-size: 1.2em;
			padding: 9px;
			margin: 0 0 0 5%;
			max-width: none;
			width: 65%;
			position: absolute;
			bottom: 20px;
			@media all and #{$mq-bootstrap-xs-max} {
				display:none;
			}
		}
		.cycle-nav {
			bottom: 20px;
			top: auto;
			right: 5%;
			.cycle-prev, .cycle-next {
				border: none;
				font-size: 1.5em;
			}
			.cycle-prev {
				background-color: $nmu-gold;
				color: $nmu-green;
				@include scaleX(-1);
			}
			@media all and #{$mq-bootstrap-xs-max} {
				width:200px;
				margin: 10px auto;
			}
		}
	}
	img {
		@include imp_opacity(0.5, isImportant) // with !important
	}
}

.degrees {
	background-color: $nmu-gray-evenlighter;
	color: $nmu-black;
	h3 {
		text-align: center;
		padding: 40px;
		margin: 0;
		background-color: $nmu-gray-lighter;
		color: $nmu-green-dark;
	}
	h4 {
		color: $nmu-green-dark;
	}
	a {
		color: inherit;
		text-decoration: underline;
	}
	ul {
		margin-top:20px;  //margins for lists added to this box that are not in the degree format
		margin-bottom:20px;
		& > li {
			padding: 2px 0 2px 0;
		}
		ul {
			margin-top:0;
			margin-bottom:0;
			li {
				padding: 2px 0 2px 0;
			}
		}
	}
	.majors, .minors, .masters, .certifications, .diplomas, .certificates, .associates,
	.major, .minor, .master, .certification, .diploma, .diploma, .certificate, .associate,
	//classes from the bulletin
	.bachelor-degree, .pre-professional, .minor, .associate-degree, .diploma, .certificate, .certification, .enrichment,
	.doctor-of-nursing-practice, .education-specialist, .master-of-fine-arts, .master-of-arts, .master-of-arts-in-education, .master-of-individualized-studies, .master-of-public-administration, .master-of-business-administration, .master-of-science, .graduate-certificate, .certification, .endorsement, .master-of-science-in-nursing, .post-masters-certificate {
		border-top: solid 2px $nmu-gray-light;
		padding-left: 25px;
		ul {
			margin-top:0;  //reset margin to bootstrap defaults
			margin-bottom:10px;  //reset to bootstrap
			list-style-type: none;
			padding-left: 0;
			& > li {
				padding: 5px 0 5px 10px;
			}
			ul {
				list-style-type: disc;
				li {
					padding: 2px 0 2px 0;
				}
			}
		}
	}
	@media all and #{$mq-bootstrap-md-min} {
		//these border styles assume that col-md-7 will always be on the left
		.col-md-7 {
			border-right: solid 2px $nmu-gray-light;
			margin-right:-2px;
		}
		//and that col-md-5 will always be on the right
		.col-md-5 {
			border-left: solid 2px $nmu-gray-light;
		}
	}
}

.what-do {
	.doing {
		background-color:$nmu-green;
		color: white;
		text-align: left;
		@media all and #{$mq-bootstrap-md-min} {
			text-align: center;
			background-color: black;
		}
		& > .overlay {
			position: relative;
			margin-left: -15px;
			margin-right: -15px;
			&:before {
				content: "";
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				background-color: rgba(0, 0, 0, .6);
			}
		}
		.overlay-text {
			padding: 20px 35px 30px 35px;
			@media all and #{$mq-bootstrap-md-min} {
				padding:0;
				position: absolute;
				width: 80%;
				left: 10%;
				top: 50%;
				transform: translateY(-50%);
			}
			h3 {
				padding-top: 0;
				color: $nmu-gold;
				background-color: inherit;
			}
			h4 {
				margin-top:20px;
			}
		}
	}
	ul{
		margin:0;
		padding:0;
		li {
			list-style:none;
		}
	}
	a {
	text-decoration:none;
	color: $nmu-gold;
		&:hover {
			text-decoration:underline;
			color: $nmu-gold;
		}
	}
}

.contact-section {
	border: solid thin $nmu-green-dark;
	border-top-width: 10px;
	text-align: center;
	color: $nmu-black;
	font-size: 1.2em;
	padding: 4em 6em;
	margin-bottom: 4em;
	@media all and #{$mq-bootstrap-xs-max} {
		padding: 2em;
		margin-bottom:0;
		font-size: 1em;
		a[href^=tel]{
			display:inline-block; //make sure the phone number does not have a line break in it on mobile
		}
	}
	.button-no-link {
		border: solid thin $nmu-green-dark;
		color: $nmu-green-dark;
		padding: 1em 2em;
	}
	.button {
		display: inline-block;
		font-weight: bold;
		font-size: 1.2em;
		margin: 1em;
		text-transform: uppercase;
		a {
			border: solid thin $nmu-green-dark;
			text-decoration:none;
			padding: 1em 2em;
			color: $nmu-green-dark;
		}
	}
	.bullet {
		margin: 0 5px;

	}
	a {
		color: inherit;
		text-decoration: underline;
	}
	p:first-of-type {
		font-weight: bold;
		margin: 2em auto;
		a {
			text-decoration: none;
		}
	}
}

